# kagglet

./: .gitignore  README.md  pixi.toml  pyproject.toml
examples/: README.md  pixi.toml  pyrightconfig.json
examples/gemma4-keras-tpu/: README.md  bootstrap.py  main.py  notebook.toml  notebook.yaml
examples/hello/: README.md  bootstrap.py  main.py  notebook.toml  notebook.yaml
src/: pixi.toml  pyproject.toml
src/kagglet/: __init__.py  __main__.py  api.py  asset.py  assets.py  cli.py  dataset.py  kernel.py  model.py  notebook.py  relay.py  stream.py  tar.py
src/kagglet/api/: __init__.py  client.py  kernels.py  meta.py  models.py
tests/: test_assets.py
