[project]
name = "kagglet"
version = "0.1.0"
description = "Automation toolkit for Kaggle: model artifacts, notebook push DAG, cell relay, SSE log streaming."
requires-python = ">=3.12"
dependencies = []

[project.scripts]
kagglet = "kagglet.cli:main"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["kagglet"]
